// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot for a new item 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="title"
      >
        Title
      </label>
      <div
        class="control"
      >
        <input
          class="input"
          data-testid="title"
          name="title"
          value=""
        />
      </div>
      <p
        class="help is-danger"
        data-testid="titleErrors"
      />
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="description"
      >
        Description
      </label>
      <div
        class="control"
      >
        <textarea
          class="textarea"
          data-testid="description"
          name="description"
        />
      </div>
      <p
        class="help is-danger"
        data-testid="descriptionErrors"
      />
    </div>
    <div
      class="field is-grouped"
    >
      <div
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          CREATE
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`should match the snapshot for an existing item 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="title"
      >
        Title
      </label>
      <div
        class="control"
      >
        <input
          class="input"
          data-testid="title"
          name="title"
          value="item title"
        />
      </div>
      <p
        class="help is-danger"
        data-testid="titleErrors"
      />
    </div>
    <div
      class="field"
    >
      <label
        class="label"
        for="description"
      >
        Description
      </label>
      <div
        class="control"
      >
        <textarea
          class="textarea"
          data-testid="description"
          name="description"
        >
          item description
        </textarea>
      </div>
      <p
        class="help is-danger"
        data-testid="descriptionErrors"
      />
    </div>
    <div
      class="field is-grouped"
    >
      <div
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          SAVE
        </button>
      </div>
      <div
        class="control"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
